<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:id="@+id/cv_user_view_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="New Text"
            android:textSize="30sp"
            android:contextClickable="false"
            android:clickable="false"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/light_spacing"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/cv_user_view_iv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/male"
            android:contentDescription="@string/gender"
            android:layout_margin="@dimen/light_spacing"
            android:layout_marginLeft="@dimen/normal_spacing"
            android:layout_marginRight="@dimen/normal_spacing"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/cv_user_view_iv_physical_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/sedentary"
            android:contentDescription="@string/physical_activity"
            android:layout_margin="@dimen/light_spacing"
            android:layout_marginLeft="@dimen/normal_spacing"
            android:layout_marginRight="@dimen/normal_spacing"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:src="@drawable/age"
            android:contentDescription="@string/age"
            android:layout_margin="@dimen/low_spacing"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/cv_user_view_tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:textSize="12sp"
            android:layout_margin="@dimen/low_spacing"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:src="@drawable/height"
            android:contentDescription="@string/height"
            android:layout_margin="@dimen/low_spacing"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/cv_user_view_tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:textSize="12sp"
            android:layout_margin="@dimen/low_spacing"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:src="@drawable/weight"
            android:contentDescription="@string/weight"
            android:layout_margin="@dimen/low_spacing"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/cv_user_view_tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:textSize="12sp"
            android:layout_margin="@dimen/low_spacing"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:src="@drawable/meals"
            android:contentDescription="@string/meals"
            android:layout_margin="@dimen/low_spacing"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/cv_user_view_tv_meals_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:textSize="12sp"
            android:layout_margin="@dimen/low_spacing"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>